# on_device-training-Quantization-and-Pruning

./: .gitignore  README.md
OnDeviceTraining/src/arithmetic/: Arithmetic.c  Matmul.c  Rounding.c
OnDeviceTraining/src/arithmetic/include/: Arithmetic.h  Matmul.h  Rounding.h
OnDeviceTraining/src/common/include/: Common.h
OnDeviceTraining/src/layer/: Layer.c  Linear.c
OnDeviceTraining/src/layer/include/: Layer.h  Linear.h
OnDeviceTraining/src/rng/: RNG.c
OnDeviceTraining/src/rng/include/: RNG.h
OnDeviceTraining/src/tensor/: DTypes.c  Quantization.c  Tensor.c  TensorConversion.c
OnDeviceTraining/src/tensor/include/: DTypes.h  DataStorage.h  Quantization.h  Tensor.h
OnDeviceTraining/src/userApi/: StorageApi.c
OnDeviceTraining/src/userApi/include/: StorageApi.h
OnDeviceTraining_HAR_FQT_RigL/: CMakeLists.txt  CMakeLists_Pico.txt
OnDeviceTraining_HAR_FQT_RigL/include/: config.h  dataset.h  fqt.h  model.h  rigl.h  train.h
OnDeviceTraining_HAR_FQT_RigL/src/: dataset.c  fqt.c  main.c  model.c  rigl.c  train.c
OnDeviceTraining_HAR_FQT_RigL/tools/: prepare_data.py
on_device training/cmake/stm32cubemx/stm32f756xg/: STM32F756XX_FLASH.ld
on_device training/cmake/stm32cubemx/stm32f756xg/Core/Inc/: eth.h  i2c.h  init.h  usart.h
on_device training/cmake/stm32cubemx/stm32f756xg/Core/Src/: init.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c
on_device training/cmake/stm32cubemx/stm32f756xg/cmake/: starm-clang.cmake
on_device training/cmake/stm32cubemx/stm32l476xg/Core/Inc/: init.h  usart.h
on_device training/cmake/stm32cubemx/stm32l476xg/Core/Src/: init.c  stm32l4xx_hal_msp.c
on_device training/cmake/stm32cubemx/stm32l476xg/cmake/: starm-clang.cmake
on_device training/cmake/stm32cubemx/stm32l4r5zi/: STM32L4R5XX_FLASH.ld
on_device training/cmake/stm32cubemx/stm32l4r5zi/Core/Inc/: gpio.h  init.h  usart.h  usb_otg.h
on_device training/cmake/stm32cubemx/stm32l4r5zi/Core/Src/: gpio.c  init.c  stm32l4xx_it.c  usart.c  usb_otg.c
on_device training/cmake/stm32cubemx/stm32l4r5zi/cmake/: starm-clang.cmake
presentations/: Notes for code readings  OnDeviceTraining_Presentation.pptx  OnDeviceTraining_Updated.pptx  Sparsity_Methods_and_RigL.pptx  Sparsity_Methods_and_RigL_enhanced.pptx  Sparsity_RigL_FQT_enhanced.pptx  Thesis_Presentation_FQT_RigL.pptx  Thesis_Presentation_FQT_RigL_1.pptx  gen_guide3.py  gen_guide4.py  gen_shell_pdf.py  gen_soc_ideas.py  thesis_fqt_rigl.pptx  thesis_fqt_rigl_enhanced.pptx  thesis_fqt_rigl_pureC_revision.pptx  thesis_project_overview.pptx
